<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sejvalo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">Sejvalo</string>
    <string name="actionbar_oglasi">Moji oglasi</string>
    <string name="actionbar_pretrage">Moje pretrage</string>
    <string name="actionbar_info">Info</string>
    <string name="actionbar_ukloni">Ukloni</string>
    <string name="hintText">Nova pretraga&#8230;</string>
    <string name="buttonSearch">Traži</string>
    <string name="buttonSeavedSearches">Moje pretrage</string>
    <string name="buttonBookmarks">Moji oglasi</string>
    <string name="buttonBookmark">Spremi oglas</string>
    <string name="buttonSave">Spremi pretragu</string>
    <string name="buttonRefine">Promijeni pretragu</string>
    <string name="buttonCancel">Odustani</string>
    <string name="buttonDelete">Ukloni</string>
    <string name="buttonOK">OK</string>

    <string-array name="spinnerItems">
        <item>Najnoviji</item>
        <item>Najstariji</item>
        <item>S nižom cijenom</item>
        <item>S višom cijenom</item>
    </string-array>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_moje_pretrage">Moje pretrage</string>
    <string name="title_activity_moji_oglasi">Moji oglasi</string>
    <string name="title_activity_info">O aplikaciji</string>
	<string name="infoText">Aplikacija Sejvalo je cooool aplikacija ;)</string>

</resources>
