<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SecondActivity" >

    <LinearLayout
        android:id="@+id/AdapterResLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AdapterResLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttonbijeli" >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.23"
            android:background="@drawable/moja_tipka_edittext"
            android:ems="10"
            android:hint="@string/hintText"
            android:inputType="textCapSentences" />

        <Button
            android:id="@+id/buttonSearch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSearch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_gradient" >

        <Button
            android:id="@+id/buttonRefine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/moja_tipka_bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/buttonRefine"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

		<View
		    android:layout_width="1dp"
		    android:layout_height="20dp"
		    android:layout_marginBottom="7dp"
		    android:layout_marginTop="7dp"
		    android:background="@android:color/darker_gray" />
        
        <Button
            android:id="@+id/buttonSeave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/moja_tipka_bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/buttonSave"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
            
    <LinearLayout
        android:id="@+id/TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AdapterResLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/view_gradient" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/ljubicasta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textQuery"
                android:layout_below="@+id/textQuery"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/moja_tipka_spinner"
            android:entries="@array/spinnerItems" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/TextLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

    </ListView>
   

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/divider_deblji" />

  <!--    -->
    
    <RelativeLayout
        android:id="@+id/relativeLayoutInvisible"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#cfff"
        android:padding="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout1"
            android:background="@drawable/bottom_gradient"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/moja_tipka_bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/buttonCancel"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
                
			<View
		    android:layout_width="1dp"
		    android:layout_height="20dp"
		    android:layout_marginBottom="7dp"
		    android:layout_marginTop="7dp"
		    android:background="@android:color/darker_gray" />
			
            <Button
            android:id="@+id/buttonBookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/moja_tipka_bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/buttonBookmark"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_gradient"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/descriptionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/linkID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/descriptionID"
                android:layout_below="@+id/descriptionID"
                android:layout_marginTop="5dp"
                android:autoLink="web"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
        
    </RelativeLayout>
        
    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayoutInfo"
            android:background="@drawable/bottom_gradient"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/moja_tipka_bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/buttonOK"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
 
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_gradient"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Aplikacija Sejvalo je cooool aplikacija ;)"
                android:textAppearance="?android:attr/textAppearanceMedium" />
     
        </RelativeLayout>
        
    
    </RelativeLayout>
    

    
</RelativeLayout>